import XCTest

class SheepCounterUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {

		
		let app = XCUIApplication()
		let increaseButton = app.buttons["Increase"]
		increaseButton.tap()
		increaseButton.tap()
		increaseButton.tap()
		increaseButton.tap()
		increaseButton.tap()
		app.staticTexts["5"].tap()
		
		let decreaseButton = app.buttons["Decrease"]
		decreaseButton.tap()
		decreaseButton.tap()
		decreaseButton.tap()
		decreaseButton.tap()

		app.buttons["reset"].tap()

		app.staticTexts["0"].tap()
		

    }
    
}
